--- a/index.html
+++ b/index.html
@@ -10,11 +10,233 @@
 </thead>
 <tbody>
 <tr>
+	<td width="4%">setuid</td>
+	<td width="32%"><a href="sampleResult/spade/setuid.svg"><img src="sampleResult/spade/setuid.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/setuid.svg"><img src="sampleResult/opus/setuid.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/setuid.svg"><img src="sampleResult/camflow/setuid.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">setreuid</td>
+	<td width="32%"><a href="sampleResult/spade/setreuid.svg"><img src="sampleResult/spade/setreuid.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/setreuid.svg"><img src="sampleResult/opus/setreuid.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/setreuid.svg"><img src="sampleResult/camflow/setreuid.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">setresuid</td>
+	<td width="32%"><a href="sampleResult/spade/setresuid.svg"><img src="sampleResult/spade/setresuid.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/setresuid.svg"><img src="sampleResult/opus/setresuid.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/setresuid.svg"><img src="sampleResult/camflow/setresuid.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">setgid</td>
+	<td width="32%"><a href="sampleResult/spade/setgid.svg"><img src="sampleResult/spade/setgid.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/setgid.svg"><img src="sampleResult/opus/setgid.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/setgid.svg"><img src="sampleResult/camflow/setgid.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">setregid</td>
+	<td width="32%"><a href="sampleResult/spade/setregid.svg"><img src="sampleResult/spade/setregid.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/setregid.svg"><img src="sampleResult/opus/setregid.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/setregid.svg"><img src="sampleResult/camflow/setregid.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">setresgid</td>
+	<td width="32%"><a href="sampleResult/spade/setresgid.svg"><img src="sampleResult/spade/setresgid.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/setresgid.svg"><img src="sampleResult/opus/setresgid.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/setresgid.svg"><img src="sampleResult/camflow/setresgid.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">dup</td>
+	<td width="32%"><a href="sampleResult/spade/dup.svg"><img src="sampleResult/spade/dup.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/dup.svg"><img src="sampleResult/opus/dup.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/dup.svg"><img src="sampleResult/camflow/dup.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">dup2</td>
+	<td width="32%"><a href="sampleResult/spade/dup2.svg"><img src="sampleResult/spade/dup2.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/dup2.svg"><img src="sampleResult/opus/dup2.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/dup2.svg"><img src="sampleResult/camflow/dup2.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">dup3</td>
+	<td width="32%"><a href="sampleResult/spade/dup3.svg"><img src="sampleResult/spade/dup3.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/dup3.svg"><img src="sampleResult/opus/dup3.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/dup3.svg"><img src="sampleResult/camflow/dup3.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">mknod</td>
+	<td width="32%"><a href="sampleResult/spade/mknod.svg"><img src="sampleResult/spade/mknod.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/mknod.svg"><img src="sampleResult/opus/mknod.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/mknod.svg"><img src="sampleResult/camflow/mknod.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">mknodat</td>
+	<td width="32%"><a href="sampleResult/spade/mknodat.svg"><img src="sampleResult/spade/mknodat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/mknodat.svg"><img src="sampleResult/opus/mknodat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/mknodat.svg"><img src="sampleResult/camflow/mknodat.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">fork</td>
+	<td width="32%"><a href="sampleResult/spade/fork.svg"><img src="sampleResult/spade/fork.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/fork.svg"><img src="sampleResult/opus/fork.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/fork.svg"><img src="sampleResult/camflow/fork.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">vfork</td>
+	<td width="32%"><a href="sampleResult/spade/vfork.svg"><img src="sampleResult/spade/vfork.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/vfork.svg"><img src="sampleResult/opus/vfork.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/vfork.svg"><img src="sampleResult/camflow/vfork.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">clone</td>
+	<td width="32%"><a href="sampleResult/spade/clone.svg"><img src="sampleResult/spade/clone.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/clone.svg"><img src="sampleResult/opus/clone.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/clone.svg"><img src="sampleResult/camflow/clone.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">create</td>
+	<td width="32%"><a href="sampleResult/spade/create.svg"><img src="sampleResult/spade/create.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/create.svg"><img src="sampleResult/opus/create.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/create.svg"><img src="sampleResult/camflow/create.svg" width="100%"/></a></td>
+</tr>	
+<tr>
 	<td width="4%">open</td>
 	<td width="32%"><a href="sampleResult/spade/open.svg"><img src="sampleResult/spade/open.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/open.svg"><img src="sampleResult/opus/open.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/open.svg"><img src="sampleResult/camflow/open.svg" width="100%"/></a></td>
 </tr>	
+<tr>
+	<td width="4%">openat</td>
+	<td width="32%"><a href="sampleResult/spade/openat.svg"><img src="sampleResult/spade/openat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/openat.svg"><img src="sampleResult/opus/openat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/openat.svg"><img src="sampleResult/camflow/openat.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">close</td>
+	<td width="32%"><a href="sampleResult/spade/close.svg"><img src="sampleResult/spade/close.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/close.svg"><img src="sampleResult/opus/close.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/close.svg"><img src="sampleResult/camflow/close.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">execve</td>
+	<td width="32%"><a href="sampleResult/spade/execve.svg"><img src="sampleResult/spade/execve.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/execve.svg"><img src="sampleResult/opus/execve.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/execve.svg"><img src="sampleResult/camflow/execve.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">exit</td>
+	<td width="32%"><a href="sampleResult/spade/exit.svg"><img src="sampleResult/spade/exit.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/exit.svg"><img src="sampleResult/opus/exit.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/exit.svg"><img src="sampleResult/camflow/exit.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">kill</td>
+	<td width="32%"><a href="sampleResult/spade/kill.svg"><img src="sampleResult/spade/kill.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/kill.svg"><img src="sampleResult/opus/kill.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/kill.svg"><img src="sampleResult/camflow/kill.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">chmod</td>
+	<td width="32%"><a href="sampleResult/spade/chmod.svg"><img src="sampleResult/spade/chmod.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/chmod.svg"><img src="sampleResult/opus/chmod.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/chmod.svg"><img src="sampleResult/camflow/chmod.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">fchmodat</td>
+	<td width="32%"><a href="sampleResult/spade/fchmodat.svg"><img src="sampleResult/spade/fchmodat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/fchmodat.svg"><img src="sampleResult/opus/fchmodat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/fchmodat.svg"><img src="sampleResult/camflow/fchmodat.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">chown</td>
+	<td width="32%"><a href="sampleResult/spade/chown.svg"><img src="sampleResult/spade/chown.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/chown.svg"><img src="sampleResult/opus/chown.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/chown.svg"><img src="sampleResult/camflow/chown.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">fchownat</td>
+	<td width="32%"><a href="sampleResult/spade/fchownat.svg"><img src="sampleResult/spade/fchownat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/fchownat.svg"><img src="sampleResult/opus/fchownat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/fchownat.svg"><img src="sampleResult/camflow/fchownat.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">link</td>
+	<td width="32%"><a href="sampleResult/spade/link.svg"><img src="sampleResult/spade/link.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/link.svg"><img src="sampleResult/opus/link.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/link.svg"><img src="sampleResult/camflow/link.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">linkat</td>
+	<td width="32%"><a href="sampleResult/spade/linkat.svg"><img src="sampleResult/spade/linkat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/linkat.svg"><img src="sampleResult/opus/linkat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/linkat.svg"><img src="sampleResult/camflow/linkat.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">symlink</td>
+	<td width="32%"><a href="sampleResult/spade/symlink.svg"><img src="sampleResult/spade/symlink.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/symlink.svg"><img src="sampleResult/opus/symlink.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/symlink.svg"><img src="sampleResult/camflow/symlink.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">symlinkat</td>
+	<td width="32%"><a href="sampleResult/spade/symlinkat.svg"><img src="sampleResult/spade/symlinkat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/symlinkat.svg"><img src="sampleResult/opus/symlinkat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/symlinkat.svg"><img src="sampleResult/camflow/symlinkat.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">rename</td>
+	<td width="32%"><a href="sampleResult/spade/rename.svg"><img src="sampleResult/spade/rename.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/rename.svg"><img src="sampleResult/opus/rename.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/rename.svg"><img src="sampleResult/camflow/rename.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">renameat</td>
+	<td width="32%"><a href="sampleResult/spade/renameat.svg"><img src="sampleResult/spade/renameat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/renameat.svg"><img src="sampleResult/opus/renameat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/renameat.svg"><img src="sampleResult/camflow/renameat.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">truncate</td>
+	<td width="32%"><a href="sampleResult/spade/truncate.svg"><img src="sampleResult/spade/truncate.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/truncate.svg"><img src="sampleResult/opus/truncate.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/truncate.svg"><img src="sampleResult/camflow/truncate.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">ftruncate</td>
+	<td width="32%"><a href="sampleResult/spade/ftruncate.svg"><img src="sampleResult/spade/ftruncate.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/ftruncate.svg"><img src="sampleResult/opus/ftruncate.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/ftruncate.svg"><img src="sampleResult/camflow/ftruncate.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">unlink</td>
+	<td width="32%"><a href="sampleResult/spade/unlink.svg"><img src="sampleResult/spade/unlink.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/unlink.svg"><img src="sampleResult/opus/unlink.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/unlink.svg"><img src="sampleResult/camflow/unlink.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">unlinkat</td>
+	<td width="32%"><a href="sampleResult/spade/unlinkat.svg"><img src="sampleResult/spade/unlinkat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/unlinkat.svg"><img src="sampleResult/opus/unlinkat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/unlinkat.svg"><img src="sampleResult/camflow/unlinkat.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">pipe</td>
+	<td width="32%"><a href="sampleResult/spade/pipe.svg"><img src="sampleResult/spade/pipe.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/pipe.svg"><img src="sampleResult/opus/pipe.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/pipe.svg"><img src="sampleResult/camflow/pipe.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">pipe2</td>
+	<td width="32%"><a href="sampleResult/spade/pipe2.svg"><img src="sampleResult/spade/pipe2.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/pipe2.svg"><img src="sampleResult/opus/pipe2.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/pipe2.svg"><img src="sampleResult/camflow/pipe2.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">tee</td>
+	<td width="32%"><a href="sampleResult/spade/tee.svg"><img src="sampleResult/spade/tee.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/tee.svg"><img src="sampleResult/opus/tee.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/tee.svg"><img src="sampleResult/camflow/tee.svg" width="100%"/></a></td>
+</tr>
 </tbody>
 </body>
 </html>
