--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
 	<td width="32%"><a href="sampleResult/camflow/setuid.svg"><img src="sampleResult/camflow/setuid.svg" width="100%"/></a></td>
 </tr>	
 <tr>
-	<td width="4%">setreuid</td>
-	<td width="32%"><a href="sampleResult/spade/setreuid.svg"><img src="sampleResult/spade/setreuid.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/setreuid.svg"><img src="sampleResult/opus/setreuid.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/setreuid.svg"><img src="sampleResult/camflow/setreuid.svg" width="100%"/></a></td>
-</tr>	
-<tr>
 	<td width="4%">setresuid</td>
 	<td width="32%"><a href="sampleResult/spade/setresuid.svg"><img src="sampleResult/spade/setresuid.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/setresuid.svg"><img src="sampleResult/opus/setresuid.svg" width="100%" /></a></td>
@@ -32,12 +26,6 @@
 	<td width="32%"><a href="sampleResult/spade/setgid.svg"><img src="sampleResult/spade/setgid.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/setgid.svg"><img src="sampleResult/opus/setgid.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/setgid.svg"><img src="sampleResult/camflow/setgid.svg" width="100%"/></a></td>
-</tr>	
-<tr>
-	<td width="4%">setregid</td>
-	<td width="32%"><a href="sampleResult/spade/setregid.svg"><img src="sampleResult/spade/setregid.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/setregid.svg"><img src="sampleResult/opus/setregid.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/setregid.svg"><img src="sampleResult/camflow/setregid.svg" width="100%"/></a></td>
 </tr>	
 <tr>
 	<td width="4%">setresgid</td>
@@ -94,10 +82,10 @@
 	<td width="32%"><a href="sampleResult/camflow/clone.svg"><img src="sampleResult/camflow/clone.svg" width="100%"/></a></td>
 </tr>	
 <tr>
-	<td width="4%">create</td>
-	<td width="32%"><a href="sampleResult/spade/create.svg"><img src="sampleResult/spade/create.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/create.svg"><img src="sampleResult/opus/create.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/create.svg"><img src="sampleResult/camflow/create.svg" width="100%"/></a></td>
+	<td width="4%">creat</td>
+	<td width="32%"><a href="sampleResult/spade/creat.svg"><img src="sampleResult/spade/creat.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/creat.svg"><img src="sampleResult/opus/creat.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/creat.svg"><img src="sampleResult/camflow/creat.svg" width="100%"/></a></td>
 </tr>	
 <tr>
 	<td width="4%">open</td>
