Update Sample Result

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 	<td width="32%"><a href="sampleResult/spade/setuid.svg"><img src="sampleResult/spade/setuid.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/setuid.svg"><img src="sampleResult/opus/setuid.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/setuid.svg"><img src="sampleResult/camflow/setuid.svg" width="100%"/></a></td>
-</tr>	
+</tr>
+<tr>
+	<td width="4%">setreuid</td>
+	<td width="32%"><a href="sampleResult/spade/setreuid.svg"><img src="sampleResult/spade/setreuid.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/setreuid.svg"><img src="sampleResult/opus/setreuid.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/setreuid.svg"><img src="sampleResult/camflow/setreuid.svg" width="100%"/></a></td>
+</tr>
 <tr>
 	<td width="4%">setresuid</td>
 	<td width="32%"><a href="sampleResult/spade/setresuid.svg"><img src="sampleResult/spade/setresuid.svg" width="100%"/></a></td>
@@ -26,6 +32,12 @@
 	<td width="32%"><a href="sampleResult/spade/setgid.svg"><img src="sampleResult/spade/setgid.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/setgid.svg"><img src="sampleResult/opus/setgid.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/setgid.svg"><img src="sampleResult/camflow/setgid.svg" width="100%"/></a></td>
+</tr>	
+<tr>
+	<td width="4%">setregid</td>
+	<td width="32%"><a href="sampleResult/spade/setregid.svg"><img src="sampleResult/spade/setregid.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/setregid.svg"><img src="sampleResult/opus/setregid.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/setregid.svg"><img src="sampleResult/camflow/setregid.svg" width="100%"/></a></td>
 </tr>	
 <tr>
 	<td width="4%">setresgid</td>
@@ -220,10 +232,28 @@
 	<td width="32%"><a href="sampleResult/camflow/pipe2.svg"><img src="sampleResult/camflow/pipe2.svg" width="100%"/></a></td>
 </tr>	
 <tr>
-	<td width="4%">tee</td>
-	<td width="32%"><a href="sampleResult/spade/tee.svg"><img src="sampleResult/spade/tee.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/tee.svg"><img src="sampleResult/opus/tee.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/tee.svg"><img src="sampleResult/camflow/tee.svg" width="100%"/></a></td>
+	<td width="4%">read</td>
+	<td width="32%"><a href="sampleResult/spade/read.svg"><img src="sampleResult/spade/read.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/read.svg"><img src="sampleResult/opus/read.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/read.svg"><img src="sampleResult/camflow/read.svg" width="100%"/></a></td>
+</tr>
+<tr>
+	<td width="4%">pread</td>
+	<td width="32%"><a href="sampleResult/spade/pread.svg"><img src="sampleResult/spade/pread.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/pread.svg"><img src="sampleResult/opus/pread.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/pread.svg"><img src="sampleResult/camflow/pread.svg" width="100%"/></a></td>
+</tr>
+<tr>
+	<td width="4%">write</td>
+	<td width="32%"><a href="sampleResult/spade/write.svg"><img src="sampleResult/spade/write.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/write.svg"><img src="sampleResult/opus/write.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/write.svg"><img src="sampleResult/camflow/write.svg" width="100%"/></a></td>
+</tr>
+<tr>
+	<td width="4%">pwrite</td>
+	<td width="32%"><a href="sampleResult/spade/pwrite.svg"><img src="sampleResult/spade/pwrite.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/pwrite.svg"><img src="sampleResult/opus/pwrite.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/pwrite.svg"><img src="sampleResult/camflow/pwrite.svg" width="100%"/></a></td>
 </tr>
 </tbody>
 </body>
