Update benchmark result

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </thead>
 <tbody>
 <tr>
+	<td width="4%">null</td>
+	<td width="32%"><a href="sampleResult/spade/null.svg"><img src="sampleResult/spade/null.svg" width="100%"/></a></td>
+	<td width="32%"><a href="sampleResult/opus/null.svg"><img src="sampleResult/opus/null.svg" width="100%" /></a></td>
+	<td width="32%"><a href="sampleResult/camflow/null.svg"><img src="sampleResult/camflow/null.svg" width="100%"/></a></td>
+</tr>
+<tr>
 	<td width="4%">setuid</td>
 	<td width="32%"><a href="sampleResult/spade/setuid.svg"><img src="sampleResult/spade/setuid.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/setuid.svg"><img src="sampleResult/opus/setuid.svg" width="100%" /></a></td>
