Update benchmark result

--- a/index.html
+++ b/index.html
@@ -55,31 +55,31 @@
 	<td width="4%">dup</td>
 	<td width="32%"><a href="sampleResult/spade/dup.svg"><img src="sampleResult/spade/dup.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/dup.svg"><img src="sampleResult/opus/dup.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/dup.svg"><img src="sampleResult/camflow/dup.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>	
 <tr>
 	<td width="4%">dup2</td>
 	<td width="32%"><a href="sampleResult/spade/dup2.svg"><img src="sampleResult/spade/dup2.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/dup2.svg"><img src="sampleResult/opus/dup2.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/dup2.svg"><img src="sampleResult/camflow/dup2.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>	
 <tr>
 	<td width="4%">dup3</td>
 	<td width="32%"><a href="sampleResult/spade/dup3.svg"><img src="sampleResult/spade/dup3.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/dup3.svg"><img src="sampleResult/opus/dup3.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/dup3.svg"><img src="sampleResult/camflow/dup3.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>	
 <tr>
 	<td width="4%">mknod</td>
 	<td width="32%"><a href="sampleResult/spade/mknod.svg"><img src="sampleResult/spade/mknod.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/mknod.svg"><img src="sampleResult/opus/mknod.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/mknod.svg"><img src="sampleResult/camflow/mknod.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>	
 <tr>
 	<td width="4%">mknodat</td>
 	<td width="32%"><a href="sampleResult/spade/mknodat.svg"><img src="sampleResult/spade/mknodat.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/mknodat.svg"><img src="sampleResult/opus/mknodat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/mknodat.svg"><img src="sampleResult/camflow/mknodat.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>	
 <tr>
 	<td width="4%">fork</td>
