Update benchmark result

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <tr>
 	<td width="4%">setresuid</td>
 	<td width="32%"><a href="sampleResult/spade/setresuid.svg"><img src="sampleResult/spade/setresuid.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/setresuid.svg"><img src="sampleResult/opus/setresuid.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/setresuid.svg"><img src="sampleResult/camflow/setresuid.svg" width="100%"/></a></td>
 </tr>	
 <tr>
@@ -48,7 +48,7 @@
 <tr>
 	<td width="4%">setresgid</td>
 	<td width="32%"><a href="sampleResult/spade/setresgid.svg"><img src="sampleResult/spade/setresgid.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/setresgid.svg"><img src="sampleResult/opus/setresgid.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/setresgid.svg"><img src="sampleResult/camflow/setresgid.svg" width="100%"/></a></td>
 </tr>	
 <tr>
@@ -90,7 +90,7 @@
 <tr>
 	<td width="4%">clone</td>
 	<td width="32%"><a href="sampleResult/spade/clone.svg"><img src="sampleResult/spade/clone.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/clone.svg"><img src="sampleResult/opus/clone.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/clone.svg"><img src="sampleResult/camflow/clone.svg" width="100%"/></a></td>
 </tr>	
 <tr>
@@ -113,7 +113,7 @@
 </tr>	
 <tr>
 	<td width="4%">close</td>
-	<td width="32%"><a href="sampleResult/spade/close.svg"><img src="sampleResult/spade/close.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/opus/close.svg"><img src="sampleResult/opus/close.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/close.svg"><img src="sampleResult/camflow/close.svg" width="100%"/></a></td>
 </tr>	
@@ -122,19 +122,7 @@
 	<td width="32%"><a href="sampleResult/spade/execve.svg"><img src="sampleResult/spade/execve.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/execve.svg"><img src="sampleResult/opus/execve.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/execve.svg"><img src="sampleResult/camflow/execve.svg" width="100%"/></a></td>
-</tr>	
-<tr>
-	<td width="4%">exit</td>
-	<td width="32%"><a href="sampleResult/spade/exit.svg"><img src="sampleResult/spade/exit.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/exit.svg"><img src="sampleResult/opus/exit.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/exit.svg"><img src="sampleResult/camflow/exit.svg" width="100%"/></a></td>
-</tr>	
-<tr>
-	<td width="4%">kill</td>
-	<td width="32%"><a href="sampleResult/spade/kill.svg"><img src="sampleResult/spade/kill.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/kill.svg"><img src="sampleResult/opus/kill.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/kill.svg"><img src="sampleResult/camflow/kill.svg" width="100%"/></a></td>
-</tr>	
+</tr>
 <tr>
 	<td width="4%">chmod</td>
 	<td width="32%"><a href="sampleResult/spade/chmod.svg"><img src="sampleResult/spade/chmod.svg" width="100%"/></a></td>
@@ -222,25 +210,25 @@
 <tr>
 	<td width="4%">read</td>
 	<td width="32%"><a href="sampleResult/spade/read.svg"><img src="sampleResult/spade/read.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/read.svg"><img src="sampleResult/opus/read.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/read.svg"><img src="sampleResult/camflow/read.svg" width="100%"/></a></td>
 </tr>
 <tr>
 	<td width="4%">pread</td>
 	<td width="32%"><a href="sampleResult/spade/pread.svg"><img src="sampleResult/spade/pread.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/pread.svg"><img src="sampleResult/opus/pread.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/pread.svg"><img src="sampleResult/camflow/pread.svg" width="100%"/></a></td>
 </tr>
 <tr>
 	<td width="4%">write</td>
 	<td width="32%"><a href="sampleResult/spade/write.svg"><img src="sampleResult/spade/write.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/write.svg"><img src="sampleResult/opus/write.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/write.svg"><img src="sampleResult/camflow/write.svg" width="100%"/></a></td>
 </tr>
 <tr>
 	<td width="4%">pwrite</td>
 	<td width="32%"><a href="sampleResult/spade/pwrite.svg"><img src="sampleResult/spade/pwrite.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/pwrite.svg"><img src="sampleResult/opus/pwrite.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/pwrite.svg"><img src="sampleResult/camflow/pwrite.svg" width="100%"/></a></td>
 </tr>
 </tbody>
