Update benchmark result

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </tr>	
 <tr>
 	<td width="4%">creat</td>
-	<td width="32%"><a href="sampleResult/spade/creat.svg"><img src="sampleResult/spade/creat.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/opus/creat.svg"><img src="sampleResult/opus/creat.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/creat.svg"><img src="sampleResult/camflow/creat.svg" width="100%"/></a></td>
 </tr>	
