Update benchmark result

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 </tr>	
 <tr>
 	<td width="4%">chown</td>
-	<td width="32%"><a href="sampleResult/spade/chown.svg"><img src="sampleResult/spade/chown.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/opus/chown.svg"><img src="sampleResult/opus/chown.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/chown.svg"><img src="sampleResult/camflow/chown.svg" width="100%"/></a></td>
 </tr>	
 <tr>
 	<td width="4%">fchownat</td>
-	<td width="32%"><a href="sampleResult/spade/fchownat.svg"><img src="sampleResult/spade/fchownat.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/opus/fchownat.svg"><img src="sampleResult/opus/fchownat.svg" width="100%" /></a></td>
 	<td width="32%"><a href="sampleResult/camflow/fchownat.svg"><img src="sampleResult/camflow/fchownat.svg" width="100%"/></a></td>
 </tr>	
