--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>Sample Benchmark Graph for ProvMark</h1>
-<h3>Click <a href='https://arthurscchan.github.com/ProvMark/'>here</a> to visit the ProvMark public repository. Clicking on the link may unblind the author's identity.</h3>
+<h3>Click <a href='https://github.com/arthurscchan/ProvMark/'>here</a> to visit the ProvMark public repository. Clicking on the link may unblind the author's identity.</h3>
 <table width="100%" border="1">
 <thead>
 <tr><td>SysCall</td><td>Benchmark Graph of SPADE</td><td>Benchmark Graph of OPUS</td><td>Benchmark Graph of CamFlow</td></tr>
