Update benchmark result

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 <tr>
 	<td width="4%">exit</td>
 	<td width="32%"><a href="sampleResult/spade/exit.svg"><img src="sampleResult/spade/exit.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/exit.svg"><img src="sampleResult/opus/exit.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/exit.svg"><img src="sampleResult/camflow/exit.svg" width="100%"/></a></td>
 </tr>
 <tr>
 	<td width="4%">fchmod</td>
 	<td width="32%"><a href="sampleResult/spade/fchmod.svg"><img src="sampleResult/spade/fchmod.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/fchmod.svg"><img src="sampleResult/opus/fchmod.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/fchmod.svg"><img src="sampleResult/camflow/fchmod.svg" width="100%"/></a></td>
 </tr>
 <tr>
@@ -91,7 +91,7 @@
 <tr>
 	<td width="4%">fchown</td>
 	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/fchown.svg"><img src="sampleResult/opus/fchown.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/fchown.svg"><img src="sampleResult/camflow/fchown.svg" width="100%"/></a></td>
 </tr>
 <tr>
