Update benchmark result

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 </tr>
 <tr>
 	<td width="4%">kill</td>
-	<td width="32%"><a href="sampleResult/spade/kill.svg"><img src="sampleResult/spade/kill.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/kill.svg"><img src="sampleResult/opus/kill.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/camflow/kill.svg"><img src="sampleResult/camflow/kill.svg" width="100%"/></a></td>
 </tr>
 <tr>
@@ -156,15 +156,15 @@
 </tr>
 <tr>
 	<td width="4%">pipe</td>
-	<td width="32%"><a href="sampleResult/spade/pipe.svg"><img src="sampleResult/spade/pipe.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/opus/pipe.svg"><img src="sampleResult/opus/pipe.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/pipe.svg"><img src="sampleResult/camflow/pipe.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
 	<td width="4%">pipe2</td>
-	<td width="32%"><a href="sampleResult/spade/pipe2.svg"><img src="sampleResult/spade/pipe2.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><a href="sampleResult/opus/pipe2.svg"><img src="sampleResult/opus/pipe2.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/pipe2.svg"><img src="sampleResult/camflow/pipe2.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
 	<td width="4%">pread</td>
@@ -246,9 +246,9 @@
 </tr>
 <tr>
 	<td width="4%">tee</td>
-	<td width="32%"><a href="sampleResult/spade/tee.svg"><img src="sampleResult/spade/tee.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/tee.svg"><img src="sampleResult/opus/tee.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/tee.svg"><img src="sampleResult/camflow/tee.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
+	<td width="32%"><h2>Empty</h2></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
 	<td width="4%">truncate</td>
