Display newest CamFlow result

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<td width="4%">close</td>
 	<td width="32%"><a href="sampleResult/spade/close.svg"><img src="sampleResult/spade/close.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/close.svg"><img src="sampleResult/opus/close.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/close.svg"><img src="sampleResult/camflow/close.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
 	<td width="4%">creat</td>
@@ -74,7 +74,7 @@
 	<td width="4%">exit</td>
 	<td width="32%"><a href="sampleResult/spade/exit.svg"><img src="sampleResult/spade/exit.svg" width="100%"/></a></td>
 	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/exit.svg"><img src="sampleResult/camflow/exit.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
 	<td width="4%">fchmod</td>
@@ -116,7 +116,7 @@
 	<td width="4%">kill</td>
 	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/kill.svg"><img src="sampleResult/camflow/kill.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
 	<td width="4%">link</td>
@@ -236,13 +236,13 @@
 	<td width="4%">symlink</td>
 	<td width="32%"><a href="sampleResult/spade/symlink.svg"><img src="sampleResult/spade/symlink.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/symlink.svg"><img src="sampleResult/opus/symlink.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/symlink.svg"><img src="sampleResult/camflow/symlink.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
 	<td width="4%">symlinkat</td>
 	<td width="32%"><a href="sampleResult/spade/symlinkat.svg"><img src="sampleResult/spade/symlinkat.svg" width="100%"/></a></td>
 	<td width="32%"><a href="sampleResult/opus/symlinkat.svg"><img src="sampleResult/opus/symlinkat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/symlinkat.svg"><img src="sampleResult/camflow/symlinkat.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
 	<td width="4%">tee</td>
