Display newest SPADE result

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </tr>
 <tr>
 	<td width="4%">exit</td>
-	<td width="32%"><a href="sampleResult/spade/exit.svg"><img src="sampleResult/spade/exit.svg" width="100%"/></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><h2>Empty</h2></td>
 </tr>
