--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <tr>
 	<td width="4%">mknodat</td>
 	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/mknodat.svg"><img src="sampleResult/opus/mknodat.svg" width="100%" /></a></td>
+	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><h2>Empty</h2></td>
 </tr>
 <tr>
