--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 	<td width="4%">tee</td>
 	<td width="32%"><h2>Empty</h2></td>
 	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
+	<td width="32%"><a href="sampleResult/camflow/tee.svg"><img src="sampleResult/camflow/tee.svg" width="100%"/></a></td>
 </tr>
 <tr>
 	<td width="4%">truncate</td>
