--- a/index.html
+++ b/index.html
@@ -1,285 +1,13 @@
 <html>
 <head>
-<title>Sample Benchmark Graph for ProvMark</title>
+<title>Result demonstration of ProvMark</title>
 </head>
 <body>
-<h1>Sample Benchmark Graph for ProvMark</h1>
+<h1>Result demonstration of ProvMark</h1>
 <h3><a href='https://github.com/arthurscchan/ProvMark/'>Link to the ProvMark code repository (WARNING: Not anonymized)</a></h3>
-<table width="100%" border="1">
-<thead>
-<tr><td>SysCall</td><td>Benchmark Graph of SPADE</td><td>Benchmark Graph of OPUS</td><td>Benchmark Graph of CamFlow</td></tr>
-</thead>
-<tbody>
-<tr>
-	<td width="4%">null</td>
-	<td width="32%"><a href="sampleResult/spade/null.svg"><img src="sampleResult/spade/null.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/null.svg"><img src="sampleResult/opus/null.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/null.svg"><img src="sampleResult/camflow/null.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">chmod</td>
-	<td width="32%"><a href="sampleResult/spade/chmod.svg"><img src="sampleResult/spade/chmod.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/chmod.svg"><img src="sampleResult/opus/chmod.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/chmod.svg"><img src="sampleResult/camflow/chmod.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">chown</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/chown.svg"><img src="sampleResult/opus/chown.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/chown.svg"><img src="sampleResult/camflow/chown.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">clone</td>
-	<td width="32%"><a href="sampleResult/spade/clone.svg"><img src="sampleResult/spade/clone.svg" width="100%"/></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/clone.svg"><img src="sampleResult/camflow/clone.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">close</td>
-	<td width="32%"><a href="sampleResult/spade/close.svg"><img src="sampleResult/spade/close.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/close.svg"><img src="sampleResult/opus/close.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">creat</td>
-	<td width="32%"><a href="sampleResult/spade/creat.svg"><img src="sampleResult/spade/creat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/opus/creat.svg"><img src="sampleResult/opus/creat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/creat.svg"><img src="sampleResult/camflow/creat.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">dup</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/dup.svg"><img src="sampleResult/opus/dup.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">dup2</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/dup2.svg"><img src="sampleResult/opus/dup2.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">dup3</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/dup3.svg"><img src="sampleResult/opus/dup3.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">execve</td>
-	<td width="32%"><a href="sampleResult/spade/execve.svg"><img src="sampleResult/spade/execve.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/execve.svg"><img src="sampleResult/opus/execve.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/execve.svg"><img src="sampleResult/camflow/execve.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">exit</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">fchmod</td>
-	<td width="32%"><a href="sampleResult/spade/fchmod.svg"><img src="sampleResult/spade/fchmod.svg" width="100%"/></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/fchmod.svg"><img src="sampleResult/camflow/fchmod.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">fchmodat</td>
-	<td width="32%"><a href="sampleResult/spade/fchmodat.svg"><img src="sampleResult/spade/fchmodat.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/fchmodat.svg"><img src="sampleResult/opus/fchmodat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/fchmodat.svg"><img src="sampleResult/camflow/fchmodat.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">fchown</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/fchown.svg"><img src="sampleResult/camflow/fchown.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">fchownat</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/fchownat.svg"><img src="sampleResult/opus/fchownat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/fchownat.svg"><img src="sampleResult/camflow/fchownat.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">fork</td>
-	<td width="32%"><a href="sampleResult/spade/fork.svg"><img src="sampleResult/spade/fork.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/fork.svg"><img src="sampleResult/opus/fork.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/fork.svg"><img src="sampleResult/camflow/fork.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">ftruncate</td>
-	<td width="32%"><a href="sampleResult/spade/ftruncate.svg"><img src="sampleResult/spade/ftruncate.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/ftruncate.svg"><img src="sampleResult/opus/ftruncate.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/ftruncate.svg"><img src="sampleResult/camflow/ftruncate.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">kill</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">link</td>
-	<td width="32%"><a href="sampleResult/spade/link.svg"><img src="sampleResult/spade/link.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/link.svg"><img src="sampleResult/opus/link.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/link.svg"><img src="sampleResult/camflow/link.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">linkat</td>
-	<td width="32%"><a href="sampleResult/spade/linkat.svg"><img src="sampleResult/spade/linkat.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/linkat.svg"><img src="sampleResult/opus/linkat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/linkat.svg"><img src="sampleResult/camflow/linkat.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">mknod</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/mknod.svg"><img src="sampleResult/opus/mknod.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">mknodat</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">open</td>
-	<td width="32%"><a href="sampleResult/spade/open.svg"><img src="sampleResult/spade/open.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/open.svg"><img src="sampleResult/opus/open.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/open.svg"><img src="sampleResult/camflow/open.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">openat</td>
-	<td width="32%"><a href="sampleResult/spade/openat.svg"><img src="sampleResult/spade/openat.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/openat.svg"><img src="sampleResult/opus/openat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/openat.svg"><img src="sampleResult/camflow/openat.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">pipe</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/pipe.svg"><img src="sampleResult/opus/pipe.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">pipe2</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/opus/pipe2.svg"><img src="sampleResult/opus/pipe2.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">pread</td>
-	<td width="32%"><a href="sampleResult/spade/pread.svg"><img src="sampleResult/spade/pread.svg" width="100%"/></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/pread.svg"><img src="sampleResult/camflow/pread.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">pwrite</td>
-	<td width="32%"><a href="sampleResult/spade/pwrite.svg"><img src="sampleResult/spade/pwrite.svg" width="100%"/></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/pwrite.svg"><img src="sampleResult/camflow/pwrite.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">read</td>
-	<td width="32%"><a href="sampleResult/spade/read.svg"><img src="sampleResult/spade/read.svg" width="100%"/></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/read.svg"><img src="sampleResult/camflow/read.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">rename</td>
-	<td width="32%"><a href="sampleResult/spade/rename.svg"><img src="sampleResult/spade/rename.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/rename.svg"><img src="sampleResult/opus/rename.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/rename.svg"><img src="sampleResult/camflow/rename.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">renameat</td>
-	<td width="32%"><a href="sampleResult/spade/renameat.svg"><img src="sampleResult/spade/renameat.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/renameat.svg"><img src="sampleResult/opus/renameat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/renameat.svg"><img src="sampleResult/camflow/renameat.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">setgid</td>
-	<td width="32%"><a href="sampleResult/spade/setgid.svg"><img src="sampleResult/spade/setgid.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/setgid.svg"><img src="sampleResult/opus/setgid.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/setgid.svg"><img src="sampleResult/camflow/setgid.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">setregid</td>
-	<td width="32%"><a href="sampleResult/spade/setregid.svg"><img src="sampleResult/spade/setregid.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/setregid.svg"><img src="sampleResult/opus/setregid.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/setregid.svg"><img src="sampleResult/camflow/setregid.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">setresgid</td>
-	<td width="32%"><a href="sampleResult/spade/setresgid.svg"><img src="sampleResult/spade/setresgid.svg" width="100%"/></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/setresgid.svg"><img src="sampleResult/camflow/setresgid.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">setresuid</td>
-	<td width="32%"><a href="sampleResult/spade/setresuid.svg"><img src="sampleResult/spade/setresuid.svg" width="100%"/></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/setresuid.svg"><img src="sampleResult/camflow/setresuid.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">setreuid</td>
-	<td width="32%"><a href="sampleResult/spade/setreuid.svg"><img src="sampleResult/spade/setreuid.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/setreuid.svg"><img src="sampleResult/opus/setreuid.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/setreuid.svg"><img src="sampleResult/camflow/setreuid.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">setuid</td>
-	<td width="32%"><a href="sampleResult/spade/setuid.svg"><img src="sampleResult/spade/setuid.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/setuid.svg"><img src="sampleResult/opus/setuid.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/setuid.svg"><img src="sampleResult/camflow/setuid.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">symlink</td>
-	<td width="32%"><a href="sampleResult/spade/symlink.svg"><img src="sampleResult/spade/symlink.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/symlink.svg"><img src="sampleResult/opus/symlink.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">symlinkat</td>
-	<td width="32%"><a href="sampleResult/spade/symlinkat.svg"><img src="sampleResult/spade/symlinkat.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/symlinkat.svg"><img src="sampleResult/opus/symlinkat.svg" width="100%" /></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-</tr>
-<tr>
-	<td width="4%">tee</td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/tee.svg"><img src="sampleResult/camflow/tee.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">truncate</td>
-	<td width="32%"><a href="sampleResult/spade/truncate.svg"><img src="sampleResult/spade/truncate.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/truncate.svg"><img src="sampleResult/opus/truncate.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/truncate.svg"><img src="sampleResult/camflow/truncate.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">unlink</td>
-	<td width="32%"><a href="sampleResult/spade/unlink.svg"><img src="sampleResult/spade/unlink.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/unlink.svg"><img src="sampleResult/opus/unlink.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/unlink.svg"><img src="sampleResult/camflow/unlink.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">unlinkat</td>
-	<td width="32%"><a href="sampleResult/spade/unlinkat.svg"><img src="sampleResult/spade/unlinkat.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/unlinkat.svg"><img src="sampleResult/opus/unlinkat.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/unlinkat.svg"><img src="sampleResult/camflow/unlinkat.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">vfork</td>
-	<td width="32%"><a href="sampleResult/spade/vfork.svg"><img src="sampleResult/spade/vfork.svg" width="100%"/></a></td>
-	<td width="32%"><a href="sampleResult/opus/vfork.svg"><img src="sampleResult/opus/vfork.svg" width="100%" /></a></td>
-	<td width="32%"><a href="sampleResult/camflow/vfork.svg"><img src="sampleResult/camflow/vfork.svg" width="100%"/></a></td>
-</tr>
-<tr>
-	<td width="4%">write</td>
-	<td width="32%"><a href="sampleResult/spade/write.svg"><img src="sampleResult/spade/write.svg" width="100%"/></a></td>
-	<td width="32%"><h2>Empty</h2></td>
-	<td width="32%"><a href="sampleResult/camflow/write.svg"><img src="sampleResult/camflow/write.svg" width="100%"/></a></td>
-</tr>
-</tbody>
+<ul>
+<li><a href='graph.html'>Show all sample benchmark graphs</a>
+<li><a href='time.html'>Show all sample execution time</a>
+</ul>
 </body>
 </html>
